// ============================================================
// Bridal / Barong / Formal Wear Boutique — Inventory & Sales
// 5 stores, sale-only (no rentals), unit-level physical tracking
// Target: PostgreSQL on Supabase (free tier)
// ============================================================

Enum unit_status {
  in_stock
  sold
  in_transit
}

Enum movement_type {
  received
  transferred_out
  transferred_in
  sold
  adjustment
}

Enum order_type {
  ready_made
  made_to_order
}

Enum order_status {
  pending
  in_progress
  ready
  released
  cancelled
}

Enum payment_method {
  cash
  gcash
  bank_transfer
}

Enum payment_kind {
  payment
  refund
  void_reversal
}

Table store {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null]
  code varchar [unique, not null, note: 'e.g. B1, LGF, GF, LCA']
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table staff {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null]
  store_id uuid [ref: > store.id, note: 'primary store this person is based at, optional']
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Note: 'Operational lookup only — used to track who handled sales, payments, and stock movements. Authentication is store-based and separate.'
}

Table category {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null, unique, note: 'Barong, Gown, Suit, Pants, Accessories...']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table product {
  id uuid [pk, default: `gen_random_uuid()`]
  category_id uuid [ref: > category.id, not null]
  name varchar [not null, note: 'e.g. "Barong Sports Collar", "Mestiza Top - Cazar"']
  description text
  is_active boolean [default: true]
  sku_prefix varchar [default: '', note: 'product SKU prefix; concrete variant SKUs are PREFIX-<first 3 of colour>-<SIZE>']
  colors "text[]" [default: '{}', note: 'matrix axis — independent list of colours']
  sizes "text[]" [default: '{}', note: 'matrix axis — independent list of sizes']
  cost_price integer [default: 0, note: 'centavos; product-level default cost per piece']
  regular_price integer [default: 0, note: 'centavos; product-level selling price, inherited by every variant']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table product_variant {
  id uuid [pk, default: `gen_random_uuid()`]
  product_id uuid [ref: > product.id, not null]
  color varchar
  size varchar
  sku varchar [unique]
  regular_price integer [not null, note: 'centavos; reference/listed price only, never overwritten by a sale']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (product_id, color, size) [unique]
  }
}

Table inventory_unit {
  id uuid [pk, default: `gen_random_uuid()`]
  variant_id uuid [ref: > product_variant.id, not null]
  cost_price integer [not null, note: 'centavos; acquisition cost of THIS specific piece']
  current_store_id uuid [ref: > store.id, not null]
  status unit_status [not null, default: 'in_stock']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (current_store_id, status)
    variant_id
  }
}

Table sales_order {
  id uuid [pk, default: `gen_random_uuid()`]
  client_ref varchar [unique, note: 'the DISPLAYED order number, allocated server-side by log_sale from order_ref_counter (store-day + type + 3-digit sequence, e.g. LGA-260910-0006). Legacy clients may supply their own.']
  idempotency_key uuid [unique, note: 'opaque per-attempt key sent by the client; a retry with the same key replays the existing order instead of recording a second one. Kept separate from client_ref so the visible number stays readable.']
  store_id uuid [ref: > store.id, not null, note: 'the sale belongs to the store, not to a staff member']
  customer_name varchar [note: 'plain text, e.g. "Vivo", "Mam C." — no dedicated customer table']
  order_type order_type [not null, default: 'ready_made']
  status order_status [not null, default: 'pending']
  dispatched_by uuid [ref: > staff.id, note: '"care of" — who handled it, informational only, not enforced']
  order_date date [not null, default: `now()`]
  notes text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table order_line_item {
  id uuid [pk, default: `gen_random_uuid()`]
  order_id uuid [ref: > sales_order.id, not null]
  product_variant_id uuid [ref: > product_variant.id, note: 'null if fully bespoke, no catalog match yet']
  unit_id uuid [ref: > inventory_unit.id, note: 'null until a physical piece is assigned — immediate for ready-made, later for MTO']
  quantity integer [not null, default: 1, note: 'must be 1 whenever unit_id is set — one row per physical unit sold. Only >1 for bulk/untracked items with no unit_id.']
  agreed_price integer [not null, note: 'centavos; ACTUAL bargained price per unit — independent of regular_price and cost_price']
  spec_note text [note: 'free-text: fabric, measurements, style detail — esp. for MTO']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    order_id
    product_variant_id
    unit_id [unique, note: 'partial: WHERE unit_id IS NOT NULL — one physical piece can only appear on one line. Created in schema.sql, guarded so a database that already holds duplicates keeps running.']
  }

  Note: 'CHECK order_line_item_unit_quantity_chk: unit_id IS NULL OR quantity = 1 (added NOT VALID, so it applies to new/updated rows only).'
}

Table payment {
  id uuid [pk, default: `gen_random_uuid()`]
  order_id uuid [ref: > sales_order.id, not null]
  amount integer [not null, note: 'centavos; positive for payments received, negative for refunds and void reversals']
  method payment_method [not null, default: 'cash']
  kind payment_kind [not null, default: 'payment']
  sales_exception_id uuid [ref: > sales_exception.id, note: 'links a refund or void reversal to its audit record']
  paid_at timestamp [default: `now()`]
  received_by uuid [ref: > staff.id, note: 'informational only, not enforced']
  notes varchar [note: 'e.g. "downpayment", "balance", or refund/void reason']

  indexes {
    order_id
  }
}

Table sales_exception {
  id uuid [pk, default: `gen_random_uuid()`]
  order_id uuid [ref: > sales_order.id, not null]
  exception_type varchar [not null, note: 'void | refund']
  reason text [not null]
  amount integer [not null, note: 'centavos; amount reversed or refunded']
  payment_method payment_method [note: 'required for refunds; null for voids that reverse original payments']
  processed_by uuid [ref: > staff.id, note: 'informational only, not enforced']
  created_at timestamp [default: `now()`]

  indexes {
    order_id
  }
}

Table stock_movement {
  id uuid [pk, default: `gen_random_uuid()`]
  unit_id uuid [ref: > inventory_unit.id, not null]
  movement_type movement_type [not null]
  from_store_id uuid [ref: > store.id]
  to_store_id uuid [ref: > store.id]
  reference_type varchar [note: '"order" | "manual" | "physical_count" | "transfer"']
  reference_id uuid [note: 'sales_order.id for sales, or one shared operation UUID for a transfer']
  performed_by uuid [ref: > staff.id, note: 'informational only, not enforced']
  note text
  created_at timestamp [default: `now()`]

  indexes {
    unit_id
    reference_id
    (movement_type, created_at)
    (from_store_id, movement_type, reference_id)
    (to_store_id, movement_type, reference_id)
  }
}

Table rpc_idempotency {
  client_ref varchar [pk]
  rpc varchar [not null, note: 'which RPC stored this result, e.g. transfer_stock']
  result jsonb [not null, note: 'the ORIGINAL result JSON, replayed on a retry']
  created_at timestamp [not null, default: `now()`]

  Note: 'Idempotency ledger for non-order writes (currently transfer_stock). RLS is enabled with NO policies and anon/authenticated are revoked, so only the SECURITY DEFINER RPCs touch it.'
}

Table order_ref_counter {
  store_id uuid [not null, ref: > store.id]
  day date [not null, note: 'the LOCAL (Asia/Manila) day']
  next_seq integer [not null, default: 0]

  indexes {
    (store_id, day) [pk]
  }

  Note: 'Per-store per-day allocator for sales_order.client_ref. log_sale takes a number from here inside its transaction, so two tills selling at the same instant can never generate the same order number.'
}
